// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student Dashboard displays as loading 1`] = `
<div
  className="student-dashboard"
>
  <div
    className="openstax-notifications-bar"
  />
  <div
    className="course-title-banner"
    data-appearance="testing"
    data-book-title="Testing"
    data-is-preview={false}
    data-term="Spring 2017"
    data-title="Local Test Course Two"
  >
    <div
      className="book-title"
    >
      <h1
        className="book-title-text"
      >
        Local Test Course Two
      </h1>
    </div>
    <div
      className="course-term"
    >
      Spring 2017
    </div>
  </div>
  <div
    className="container"
    data-tour-region-id="student-dashboard"
  >
    <div
      className="row"
    >
      <div
        className="col-lg-9 col-md-8 col-xs-12"
      >
        <nav
          className="tutor-tabs"
        >
          <ul
            className="nav nav-tabs"
            role="tablist"
          >
            <li
              aria-selected={true}
              className="active"
              role="tab"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <h2>
                  This Week
                </h2>
              </a>
            </li>
            <li
              aria-selected={false}
              className=""
              role="tab"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <h2>
                  All Past Work
                </h2>
              </a>
            </li>
          </ul>
        </nav>
        <div
          className="tab-pane active"
          role="tabpanel"
        >
          <div
            className="empty pending panel panel-default"
            id={undefined}
          >
            <div
              className="panel-body"
            >
              <i
                className="tutor-icon fa fa-spinner fa-spin"
                role="presentation"
                type="spinner"
              />
               Preparing assignments for your course.  This can take up to 10 minutes.
            </div>
          </div>
          <div
            className="empty pending upcoming panel panel-default"
            id={undefined}
          >
            <div
              className="panel-body"
            >
              <i
                className="tutor-icon fa fa-spinner fa-spin"
                role="presentation"
                type="spinner"
              />
               Preparing assignments for your course.  This can take up to 10 minutes.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sidebar col-lg-3 col-md-4 col-xs-12"
      >
        <div
          className="actions-box loadable is-loading"
        >
          Loading progress information... 
        </div>
        <div
          className="actions-box"
        >
          <a
            className="browse-the-book"
            data-appearance="college_physics"
            href="/book/1"
            onClick={[Function]}
            target="_blank"
          >
            <div>
              Browse the Book
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Student Dashboard matches snapshot 1`] = `
<div
  className="student-dashboard"
>
  <div
    className="openstax-notifications-bar viewable"
  >
    <div
      className="notification missing-student-id"
    >
      <span
        className="body"
      >
        <i
          className="icon fa fa-info-circle"
        />
        <span>
          To get credit for your work, add your student ID.
        </span>
        <a
          className="action"
          onClick={[Function]}
        >
          Add Student ID
        </a>
      </span>
    </div>
  </div>
  <div
    className="course-title-banner"
    data-appearance="testing"
    data-book-title="Testing"
    data-is-preview={false}
    data-term="Spring 2017"
    data-title="Local Test Course One"
  >
    <div
      className="book-title"
    >
      <h1
        className="book-title-text"
      >
        Local Test Course One
      </h1>
    </div>
    <div
      className="course-term"
    >
      Spring 2017
    </div>
  </div>
  <div
    className="container"
    data-tour-region-id="student-dashboard"
  >
    <div
      className="row"
    >
      <div
        className="col-lg-9 col-md-8 col-xs-12"
      >
        <nav
          className="tutor-tabs"
        >
          <ul
            className="nav nav-tabs"
            role="tablist"
          >
            <li
              aria-selected={true}
              className="active"
              role="tab"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <h2>
                  This Week
                </h2>
              </a>
            </li>
            <li
              aria-selected={false}
              className=""
              role="tab"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <h2>
                  All Past Work
                </h2>
              </a>
            </li>
          </ul>
        </nav>
        <div
          className="tab-pane active"
          role="tabpanel"
        >
          <div
            className="-this-week panel panel-default"
            id={undefined}
          >
            <div
              className="panel-body"
            >
              <div
                className="row labels"
              >
                <div
                  className="col-sm-7 col-xs-12"
                >
                  <span
                    className="date-range"
                  >
                    <time>
                      Oct 12, 2015
                    </time>
                    <span>
                      –
                    </span>
                    <time>
                      Oct 18, 2015
                    </time>
                  </span>
                </div>
                <div
                  className="progress-label col-sm-3 col-sm-offset-0 col-xs-5 col-xs-offset-2"
                >
                  Progress
                </div>
                <div
                  className="due-at-label col-sm-2 col-xs-5"
                >
                  Due
                </div>
              </div>
              <a
                aria-label="Work on reading: dot-com recontextualize communities"
                className="task row reading"
                data-event-id={1}
                href="/course/1/task/1"
                onClick={[Function]}
                onKeyDown={undefined}
                tabIndex={-1}
              >
                <div
                  className="column-icon col-sm-1 col-xs-2"
                >
                  <i
                    aria-label="reading icon"
                    className="icon icon-lg icon-reading"
                  />
                </div>
                <div
                  className="title col-sm-6 col-xs-10"
                >
                  dot-com recontextualize communities
                </div>
                <div
                  className="feedback col-sm-3 col-xs-5"
                >
                  <span>
                    In progress
                  </span>
                </div>
                <div
                  className="due-at col-sm-2 col-xs-5"
                >
                  <time>
                    Oct 18, 7:00am
                  </time>
                </div>
              </a>
              <a
                aria-label="Work on external: out-of-the-box embrace supply-chains"
                className="task row external"
                data-event-id={2}
                href="/course/1/task/2"
                onClick={[Function]}
                onKeyDown={undefined}
                tabIndex={-1}
              >
                <div
                  className="column-icon col-sm-1 col-xs-2"
                >
                  <i
                    aria-label="external icon"
                    className="icon icon-lg icon-external"
                  />
                </div>
                <div
                  className="title col-sm-6 col-xs-10"
                >
                  out-of-the-box embrace supply-chains
                </div>
                <div
                  className="feedback col-sm-3 col-xs-5"
                >
                  <span>
                    Not started
                  </span>
                </div>
                <div
                  className="due-at col-sm-2 col-xs-5"
                >
                  <time>
                    Oct 18, 7:00am
                  </time>
                </div>
              </a>
              <a
                aria-label="Work on event: B2B deliver content"
                className="task row event"
                data-event-id={3}
                href="/course/1/task/3"
                onClick={[Function]}
                onKeyDown={undefined}
                tabIndex={-1}
              >
                <div
                  className="column-icon col-sm-1 col-xs-2"
                >
                  <i
                    aria-label="event icon"
                    className="icon icon-lg icon-event"
                  />
                </div>
                <div
                  className="title col-sm-6 col-xs-10"
                >
                  B2B deliver content
                </div>
                <div
                  className="feedback col-sm-3 col-xs-5"
                >
                  <span>
                    
                  </span>
                </div>
                <div
                  className="due-at col-sm-2 col-xs-5"
                >
                  <time>
                    Oct 18, 7:00am
                  </time>
                </div>
              </a>
              <a
                aria-label="Work on homework: virtual strategize infomediaries"
                className="task row homework"
                data-event-id={4}
                href="/course/1/task/4"
                onClick={[Function]}
                onKeyDown={undefined}
                tabIndex={-1}
              >
                <div
                  className="column-icon col-sm-1 col-xs-2"
                >
                  <i
                    aria-label="homework icon"
                    className="icon icon-lg icon-homework"
                  />
                </div>
                <div
                  className="title col-sm-6 col-xs-10"
                >
                  virtual strategize infomediaries
                </div>
                <div
                  className="feedback col-sm-3 col-xs-5"
                >
                  <span>
                    <span
                      className="tour-anchor"
                      data-tour-anchor-id="assignment-progress-status"
                    >
                      10/11 answered
                    </span>
                  </span>
                </div>
                <div
                  className="due-at col-sm-2 col-xs-5"
                >
                  <time>
                    Oct 18, 7:00am
                  </time>
                </div>
              </a>
            </div>
          </div>
          <div
            className="empty upcoming panel panel-default"
            id={undefined}
          >
            <div
              className="panel-body"
            >
              No upcoming assignments
            </div>
          </div>
        </div>
      </div>
      <div
        className="sidebar col-lg-3 col-md-4 col-xs-12"
      >
        <div
          className="actions-box loadable is-loading"
        >
          Loading progress information... 
        </div>
        <div
          className="actions-box"
        >
          <a
            className="browse-the-book"
            data-appearance="college_physics"
            href="/book/1"
            onClick={[Function]}
            target="_blank"
          >
            <div>
              Browse the Book
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
